--- a/gendactu/resources/views/layouts/newtopic.edge
+++ b/gendactu/resources/views/layouts/newtopic.edge
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>GendActu</title>
+  <title>Ajout topics</title>
   <link rel="icon" href="images/gendy.jpg" />
   {{ style('css/style') }}
 </head>
