--- a/gendactu/resources/views/index.edge
+++ b/gendactu/resources/views/index.edge
@@ -1,8 +1,8 @@
 @layout('layouts.main')
-
 @section('title')
     Portail GendActu
 @endsection
+
 
 @section('content')
     <div class="form">
@@ -27,7 +27,7 @@
         </div>
         <div id="password">
             <label for="pwd">Mot de passe:</label>
-            <input type="password" name="pwd" id="pwd" {{old('pwd','')}}/>
+            <input type="password" name="pwd" id="pwd" />
             @if(hasErrorFor('pwd'))
             <span>
                 {{getErrorFor('pwd')}}
