--- a/gendactu/public/css/style.css
+++ b/gendactu/public/css/style.css
@@ -6,8 +6,10 @@ html, body {
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  background-color: #BDB3CB44 !important;
+  font-family: Helvetica, Arial,sans-serif;
   font-weight: 300;
+  font-size: 12px !important;
 }
 
 * {
@@ -70,14 +72,13 @@ p {
 }
 
 .form{
-  background-color: #BDB3CB55;
+  background-color: #BDB3CB33;
   width: 100%;
   height: 500px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
-  border-radius: 5px;
   padding: 10px;
 }
 
@@ -93,4 +94,88 @@ p {
     opacity: 1;
     transform: none;
   }
+}
+
+#logo{
+  height: 100px;
+  width:auto;
+}
+
+input, textarea{
+  border: 1px solid #0000FF75;
+  border-radius: 10px;
+  padding: 5px;
+  height: 25px !important;
+  padding: 5px;
+}
+
+textarea:focus, input:focus{
+  outline: none;
+  border: 1px solid #0000FF;
+  border-radius: 10px;
+}
+
+header{
+  position: fixed;
+  z-index: 2;
+  top: 0px;
+  width: 100%;
+  text-align: center;
+  background: linear-gradient(to right,  #0000FF 0%, #0000FF 33%, #FFFFFF 33%,#FFFFFF 67%,red 67%, red 100%);
+}
+
+.bt_sbt{
+  padding: 5px;
+  background: #0000FFCC;
+  color: white;
+  outline: none;
+  border: 1px solid #0000FF;
+  border-radius: 5px;
+  font-weight: 600;
+}
+
+.bt_sbt:hover{
+  padding: 5px;
+  background: white;
+  color:  #0000FF;
+  outline: none;
+  border: 1px solid #0000FFCC;
+  border-radius: 5px;
+}
+
+.headermenu{
+  display: flex;
+  justify-content: space-between;
+  margin: 0px 20px;
+  padding: 3px;
+}
+
+button{
+  height: 30px;
+  text-align: center;
+}
+
+button>i{
+  padding: 0;
+  padding-left: 5px; 
+}
+
+.headermenu>div{
+  padding-right: 5px;
+  background: white;
+  border-radius: 5px;
+}
+
+.headermenu>div>a{
+  color: black;
+}
+
+
+i{
+  padding: 5px;
+}
+
+#formIndex{
+  margin-top: 50vh; 
+  transform: translateY(-50%); 
 }
