--- a/gendactu/public/css/accueil.css
+++ b/gendactu/public/css/accueil.css
@@ -1,3 +1,12 @@
+@media (max-width : 700px) {
+    #francemap{
+        display:none !important;
+    }
+    .fa-search{
+        display: none;
+    }
+}
+
 #searchbar{
     margin-top: 20px;
     display: flex;
@@ -42,3 +51,5 @@ body{
     max-height: 200px;
     margin-bottom: 20px;
 }
+
+
