--- a/gendactu/public/css/style.css
+++ b/gendactu/public/css/style.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300');
 
 html, body {
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 
 body {
   background-color: #BDB3CB44 !important;
   font-family: Helvetica, Arial,sans-serif;
   font-weight: 300;
-  font-size: 12px !important;
+  font-size: 16px !important;
 }
 
 * {
@@ -18,7 +18,6 @@ body {
 }
 
 section {
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -105,7 +104,6 @@ input, textarea{
   border: 1px solid #0000FF75;
   border-radius: 10px;
   padding: 5px;
-  height: 25px !important;
   padding: 5px;
 }
 
@@ -176,6 +174,17 @@ i{
 }
 
 #formIndex{
-  margin-top: 50vh; 
-  transform: translateY(-50%); 
+  align-items: center;
+  height: 100%;
+}
+
+.container{
+  height: 100%;
+}
+
+.formcontainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
