--- a/gendactu/resources/views/index.edge
+++ b/gendactu/resources/views/index.edge
@@ -5,9 +5,9 @@
 
 
 @section('content')
-<div class="container-fluid" id="formIndex">
-    <div class="row justify-content-center align-self-center">
-        <div class="form justify-content-center align-self-center">
+<div class="container-fluid " id="formIndex">
+    <div class="formcontainer">
+        <div class="form">
             <div id="pres" class="form-group form-control-sm">
             <h3 id="welcome">Bienvenue sur GendActu</h3>
             <img src="images/logo.png" alt="logo du portail de connexion" id="logo">
