--- a/gendactu/resources/views/layouts/accueil.edge
+++ b/gendactu/resources/views/layouts/accueil.edge
@@ -4,14 +4,18 @@
   GendActu
 @endsection
 
-@section('extrascript')
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+@section('extracss')
   {{style('css/accueil')}}
   {{style('css/jqvmap')}}
+@endsection
+
+@section('extrascript')
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   {{script('js/jquery.vmap')}}
   {{script('js/jquery.vmap.france')}}
   {{script('js/jquery.vmap.colorsFrance')}}
   {{script('js/map')}}
+  {{script('js/accueil')}}
 @endsection
 
 @section('header')
@@ -23,47 +27,35 @@
       <a href="/actu"><i class="fa fa-home" aria-hidden="true"></i> Accueil </a>
     </div>
     <div>
-      <a href="/topics/gestion"><i class="fa fa-cog" aria-hidden="true"> </i> Gestion </a>
+      <a href="/gestion/topics"><i class="fa fa-cog" aria-hidden="true"> </i> Gestion </a>
     </div>
   </div>
 @endsection
 
 @section('content')
-  <div class="container">
-    <div id="searchbar">
+  <div id="searchbar">
       <div>
         <label for="department">Department:</label>
         <select id="department">
-          <option value="">--Departement--</option>
-          @each(dept in departments)
-            <option value="{{dept.departmentId}}">{{dept.departmentName}}</option>  
-          @endeach
         </select>
       </div>
       <div>
           <label for="theme">Theme:</label>
           <select id="themes">
-            <option value="">--Themes--</option>
-            @each(theme in themes)
-              <option value="{{theme.themeId}}">{{theme.description}}</option>  
-            @endeach
           </select>
-        </div>
-      <button type="submit" class="bt_sbt">Rechercher<i class="fa fa-search" aria-hidden="true"></i></button>
+      </div>
+      <button  onclick="recherche()" class="bt_sbt">Rechercher<i class="fa fa-search" aria-hidden="true"></i></button>
     </div>
     <div id="francemap"></div>
-  </div>
-  @each(topic in topics)
-    <div class="topic">
-    <a href="/topics/{{topic.topicId}}">
-    <h3>{{topic.title}}</h3>
-    @if(topic.image)
-      <img class="topicImg" src="{{topic.image}}" alt="Image en lien avec le post">
-    @endif
-    </a>
-    <p>{{topic.description}}</p>
-    </div>
-  @endeach
+    <div id="topicsliste"></div>
+    <div id="pagination"></div>
+    <script>
+      function recherche(){
+          var th = document.getElementById('themes').value;
+          var dpt = document.getElementById('department').value;
+          getTopics(dpt,th);
+        }
+    </script>
 @endsection
 
 @section('footer')
@@ -73,3 +65,5 @@
       <p>fsmague@gmail.com</p>
     </div>
 @endsection
+
+
