Modification partie détails

--- a/gendactu/resources/views/layouts/topic.edge
+++ b/gendactu/resources/views/layouts/topic.edge
@@ -11,16 +11,16 @@
 
 @section('header')
 <div class="headertitle">
-  <h3 id="welcome">Détails de l'actualité</h3>
-</div>
-<div class="headermenu">
-  <div>
-    <a href="/actu"><i class="fa fa-home" aria-hidden="true"></i> Accueil </a>
+    <h3 id="welcome">Détails de l'actualité</h3>
   </div>
-  <div>
-    <a href="/topics/gestion"><i class="fa fa-cog" aria-hidden="true"> </i> Gestion </a>
+  <div class="headermenu">
+    <div>
+      <a href="/actu"><i class="fa fa-home" aria-hidden="true"></i> Accueil </a>
+    </div>
+    <div>
+      <a href="/gestion/topics"><i class="fa fa-cog" aria-hidden="true"> </i> Gestion </a>
+    </div>
   </div>
-</div>
 @endsection
 
 @section('content') 
