--- a/gendactu/public/css/accueil.css
+++ b/gendactu/public/css/accueil.css
@@ -21,6 +21,9 @@
 }
 
 footer{
+    position: relative;
+    bottom: 0;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -35,7 +38,8 @@ footer>div>a{
 }
 
 body{
-    margin-top: 75px; 
+    padding-top: 80px; 
+    height: 100%;
 }
 
 .topic{
@@ -47,15 +51,12 @@ body{
     margin-bottom: 15px;
 }
 
+#topicnull{
+    text-align: center;
+    padding: 20px;
+}
+
 .topicImg{
     max-height: 200px;
     margin-bottom: 20px;
-}
-
-
-#mright{
-    display: flex;
-    flex-direction: row;
-    padding: 0px 5px;
-    justify-content: space-between;
 }
