--- a/gendactu/public/css/gestion.css
+++ b/gendactu/public/css/gestion.css
@@ -1,3 +1,154 @@
 body{
-    margin-top: 100px; 
+    padding-top: 100px;
+}
+
+footer{
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    margin-top: 30px;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #428bca;
+    color: white;
+    padding: 10px;
+}
+
+footer>div>a{
+    color: white;
+}
+
+#gendarmerie{
+    text-align: center;
+    padding: 10px;
+}
+
+#entete{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+#linkCreate>a{
+    color: white;
+}
+
+#linkCreate>a:hover {
+    color: #0000FF;
+}
+
+#linkCreate{
+    padding: 5px;
+    background: #0000FFCC;
+    color: white;
+    outline: none;
+    border: 1px solid #0000FF;
+    border-radius: 5px;
+    font-weight: 600;
+  }
+  
+  #linkCreate:hover{
+    padding: 5px;
+    background: white;
+    color:  #0000FF;
+    outline: none;
+    border: 1px solid #0000FFCC;
+    border-radius: 5px;
+  }
+
+  #linkCreate>a>i{
+    padding: 0;
+    padding-right: 5px; 
+  }
+
+#topicsliste{
+    text-align: center;
+    padding: 10px;
+    border: white solid 1px;
+    background-color: #FFFFFF88;
+    border-radius: 20px;
+    margin-bottom: 15px;
+}
+
+.topic{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    border: white solid 1px;
+    background-color: #FFFFFF55;
+    border-radius: 20px;
+    margin-bottom: 15px;
+}
+
+.topic>div{
+    width: 50%;
+}
+
+.edit{
+    padding: 10px;
+    background: #00FF00CC;
+    color: white;
+    outline: none;
+    border: 1px solid #00FF00;
+    border-radius: 5px;
+    font-weight: 600;
+}
+
+a:hover{
+    text-decoration: none;
+}
+
+.edit:hover{
+    padding: 10px;
+    background: white;
+    color:  #00FF00;
+    outline: none;
+    border: 1px solid #00FF00CC;
+    border-radius: 5px;
+}
+
+.edit>i{
+    padding: 0;
+    padding-right: 5px; 
+}
+
+.remove{
+    height: 100%;
+    padding: 10px;
+    background: #FF0000CC;
+    color: white;
+    outline: none;
+    border: 1px solid #FF0000;
+    border-radius: 5px;
+    font-weight: 600;
+}
+
+.remove:hover{
+    padding: 10px;
+    background: white;
+    color:  #FF0000;
+    outline: none;
+    border: 1px solid #FF0000CC;
+    border-radius: 5px;
+}
+
+.remove>i{
+    padding: 0;
+    padding-right: 5px; 
+}
+
+.infoT{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+
 }
