--- a/gendactu/public/css/topic.css
+++ b/gendactu/public/css/topic.css
@@ -1,5 +1,6 @@
 body{
-    margin-top: 75px; 
+    padding-top: 150px;
+    height: 100%; 
 }
 
 
@@ -22,8 +23,8 @@ footer>div>a{
 }
 
 .topic{
+    text-align: center;
     width: 100%;
-    margin-top: 150px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -34,6 +35,8 @@ footer>div>a{
 
 .topic>div{
     width: 50%;
+    padding: 15px 0px;
+    margin: 10px 0px;
 }
 
 
