--- a/gendactu/resources/views/layouts/accueil.edge
+++ b/gendactu/resources/views/layouts/accueil.edge
@@ -22,21 +22,21 @@
     <h3 id="welcome">Bienvenue sur GendActu</h3>
   </div>
   <div class="headermenu">
-    <div>
+    <div id="mleft">
       <a href="/actu"><i class="fa fa-home" aria-hidden="true"></i> Accueil </a>
     </div>
     <div id="mright">
     @if(admin == true)
-      <div >
-          <div id="gestion">
+      <div id="gestion">
+          <div >
             <a href="/gestion/topics" ><i class="fa fa-cog" aria-hidden="true"> </i> Gestion </a>
           </div>
       </div>
+      @endif    
       <div id="logout">
           <a href="/logout"><i class="fa fa-sign-out" aria-hidden="true"> </i> Deconnexion </a>
       </div>
     </div>
-    @endif    
   </div>
 @endsection
 
@@ -58,9 +58,10 @@
     <div id="topicsliste"></div>
     <div id="pagination"></div>
     <script>
-      getTopics();
+      getUserDepartment();
       getThemes();
       getDepartment();
+      getTopics();
       
     </script>
 @endsection
