--- a/gendactu/resources/views/layouts/topic.edge
+++ b/gendactu/resources/views/layouts/topic.edge
@@ -14,12 +14,21 @@
     <h3 id="welcome">Détails de l'actualité</h3>
   </div>
   <div class="headermenu">
-    <div>
-      <a href="/actu"><i class="fa fa-home" aria-hidden="true"></i> Accueil </a>
-    </div>
-    <div>
-      <a href="/gestion/topics"><i class="fa fa-cog" aria-hidden="true"> </i> Gestion </a>
-    </div>
+      <div id="mleft">
+          <a href="/actu"><i class="fa fa-home" aria-hidden="true"></i> Accueil </a>
+        </div>
+        <div id="mright">
+            @if(admin == true)
+              <div id="gestion">
+                  <div >
+                    <a href="/gestion/topics" ><i class="fa fa-cog" aria-hidden="true"> </i> Gestion </a>
+                  </div>
+              </div>
+              @endif    
+              <div id="logout">
+                  <a href="/logout"><i class="fa fa-sign-out" aria-hidden="true"> </i> Deconnexion </a>
+              </div>
+            </div> 
   </div>
 @endsection
 
@@ -28,14 +37,17 @@
       <div class="infosTopic">
         <div class="theme">
           <h1>Theme de l'actualité:</h1>
-          <h1>{{theme.description}}</h1>
+          <h2>{{theme.description}}</h2>
         </div>
         <div class="titre">
           <h3>Intitulé:</h3>
-          <h3>{{topic.title}}</h3>
+          <h4>{{topic.title}}</h4>
           @if(topic.image)
             <img src="{{topic.image}}" alt="Image en lien avec le post">
           @endif
+        </div>
+        <div>
+          <h5> Description: </h5>
           <p>{{topic.description}}</p>
         </div>
       </div>
