Correction de bugs

--- a/gendactu/public/css/edit.css
+++ b/gendactu/public/css/edit.css
@@ -102,10 +102,6 @@ button{
 }
 
 button:hover{
-    padding: 10px;
-    background: white;
-    color:  #0000FF;
+    color:  white;
     outline: none;
-    border: 1px solid #0000FFCC;
-    border-radius: 5px;
 }
