--- a/gendactu/resources/views/layouts/accueil.edge
+++ b/gendactu/resources/views/layouts/accueil.edge
@@ -58,11 +58,7 @@
     <div id="topicsliste"></div>
     <div id="pagination"></div>
     <script>
-      getUserDepartment();
-      getThemes();
-      getDepartment();
-      getTopics();
-      
+      init();
     </script>
 @endsection
 
