--- a/gendactu/resources/views/layouts/topic.edge
+++ b/gendactu/resources/views/layouts/topic.edge
@@ -53,9 +53,10 @@
       </div>
 
       <div class="infosProprio">
-          <p>{{gendarmerie.gendarmerieName}}</p>
+          <h4>{{gendarmerie.gendarmerieName}}</h4>
           <p>{{gendarmerie.street}}</p>
           <p>{{gendarmerie.city}} {{gendarmerie.postalCode}}</p>
+          <p>+33{{gendarmerie.phoneNumber}}</p>
         </div>
     </div>
 @endsection
